# pip-tools-compile-impersonate

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  LICENSE  README.md  noxfile.py  pip-tools-compile  pyproject.toml  setup.cfg  setup.py
.github/workflows/: tests.yml
pip_tools_compile/: __init__.py  __main__.py
tests/: conftest.py  test_compile.py
tests/files/: boto3.in
tests/files/expected/py2.7/: boto3.txt
tests/files/expected/py3.10/: boto3.txt
tests/files/expected/py3.11/: boto3.txt
tests/files/expected/py3.12/: boto3.txt
tests/files/expected/py3.4/: boto3.txt
tests/files/expected/py3.5/: boto3.txt
tests/files/expected/py3.6/: boto3.txt
tests/files/expected/py3.7/: boto3.txt
tests/files/expected/py3.8/: boto3.txt
tests/files/expected/py3.9/: boto3.txt
