[tool.poetry]
name = "pip-tools-compile"
version = "4.4"
description = "Impersonate different systems when running pip-tools `pip-compile` command"
authors = ["Pedro Algarvio <pedro@algarvio.me>"]
license = "Apache Software License 2.0"
repository = "https://github.com/saltstack/pip-tools-compile-impersonate"
readme = "README.md"
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Cython",
    "Programming Language :: Python :: 3 :: Only",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
]

[tools.poetry.urls]
"Bug Tracker" = "https://github.com/saltstack/pip-tools-compile-impersonate/issues"

[tool.poetry.scripts]
pip-tools-compile = 'pip_tools_compile.__main__:main'

[tool.poetry.dependencies]
python = ">=3.6,<4.0"
pip-tools = "5.5.0"
pip = "20.2.4"
setuptools-rust = "^0.12.1"
wheel = "^0.37.0"
setuptools = ">=49.6.0"

[tool.poetry.dev-dependencies]
pytest = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
