[metadata]
name = pip-tools-compile
description = Impersonate different systems when running pip-tools `pip-compile` command
long_description = file: README.rst
author = Pedro Algarvio
author_email = pedro@algarvio.me
url = https://github.com/saltstack/pip-tools-compile-impersonate
project_urls =
    Source=https://github.com/saltstack/pip-tools-compile-impersonate
    Tracker=https://github.com/saltstack/pip-tools-compile-impersonate/issues
license = Apache Software License 2.0
classifiers =
    Programming Language :: Python
    Programming Language :: Cython
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
platforms = unix, linux, osx, cygwin, win32

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >= 3.5
setup_requires =
  setuptools>=50.3.2
  setuptools_scm[toml]>=3.4
  setuptools-declarative-requirements
install_requires =
  pip-tools==5.5.0
  pip==20.2.4
  setuptools-rust
  wheel
  setuptools>=49.6.0

[options.packages.find]
exclude =
  tests*

[options.entry_points]
console_scripts =
  pip-tools-compile = pip_tools_compile.__main__:main

[bdist_wheel]
universal = false
